# finai-assist

./: .gitignore  app.py  chatbot.py  default_prompts.py  financials_metrics_agent.py  hello.py  installation steps.txt  pydantic_models.py  pyproject.toml  requirements.txt  s3_services.py  testing.ipynb  utils.py
.streamlit/: secrets.toml
